--- a/Ex1.ipynb
+++ b/Ex1.ipynb
@@ -21,7 +21,6 @@
     "colab": {
       "name": "Ex1.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -42,10 +41,10 @@
       "metadata": {
         "id": "dtdfJh9IfDRo",
         "colab_type": "code",
-        "outputId": "bd299ca2-267d-4508-c566-65bafc5ad8a3",
+        "outputId": "0103af24-687b-4472-9bea-7faf74b2325e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         }
       },
       "source": [
@@ -54,15 +53,11 @@
         "root_dir = \"/content/gdrive/My Drive/\"\n",
         "base_dir = root_dir + 'fastai-v3/'"
       ],
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
             "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
@@ -76,7 +71,9 @@
         "colab_type": "text"
       },
       "source": [
-        "When you run the above cell to setting your own Google drive, go to the link, get authorization code for your drive."
+        "When you run the above cell to setting your own Google drive, go to the link, get authorization code for your drive.\n",
+        "\n",
+        "- Colab : colab google server에 개인 계정(account)를 만들어 원격으로 이를 이용한다."
       ]
     },
     {
@@ -84,7 +81,7 @@
       "metadata": {
         "id": "eSYYusmXfDR3",
         "colab_type": "code",
-        "outputId": "b0399b40-d2ef-49c6-c1b0-9482f50b7ec2",
+        "outputId": "071b4fc5-1a6f-4258-d238-8091744f6463",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -93,7 +90,7 @@
       "source": [
         "!curl -s https://course.fast.ai/setup/colab | bash"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +109,13 @@
         "colab_type": "text"
       },
       "source": [
-        "Above cells need to be wroten for your colab setting"
+        "Above cells need to be wroten for your colab setting\n",
+        "- 파이선 명령어 실행을 위한 기본적인 library 설치\n",
+        "- ! : 그 후에 나오는 명령어가 일반 python 명령어가 아닌 bash shell 명령어라는 것을 의미한다.\n",
+        "  - shell : unix 환경의 터미널에서 실행하는 명령어\n",
+        "- curl[url]은 원격 장소인 url에서 파일을 전송받아 그 결과를 return 한다.\n",
+        "- | : `command1|command2|command3`와 같이 bash command를 연속으로 사용할 때 이용한다.\n",
+        "- 위 statement는 colab 노트북을 사용하기 위해 필요한 libary를 curl을 이용해 url로부터 받아와(return) 그 bash shell script를 shell 명령어로 bash 를 이용해 한번에 실행한다. "
       ]
     },
     {
@@ -159,7 +162,7 @@
       "source": [
         "1+1"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +212,7 @@
       "source": [
         "3/2"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +363,7 @@
         "d = c + b + a + 1\n",
         "a, b, c ,d"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +394,7 @@
         "plt.plot([a,b,c,d])\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -450,16 +453,16 @@
       "metadata": {
         "id": "4LxHxsGHHK3D",
         "colab_type": "code",
+        "outputId": "5fe481cf-cc65-4ff3-d293-552ee38c490f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 635
-        },
-        "outputId": "5fe481cf-cc65-4ff3-d293-552ee38c490f"
+        }
       },
       "source": [
         "Image.open('images/notebook_tutorial/directoryImageforColab.png')"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +493,7 @@
       "source": [
         "Image.open('images/notebook_tutorial/cat_example.jpg')"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
