add comment for mounting google drive

--- a/Ex1.ipynb
+++ b/Ex1.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "dtdfJh9IfDRo",
         "colab_type": "code",
-        "outputId": "0103af24-687b-4472-9bea-7faf74b2325e",
+        "outputId": "2ad3d44c-8428-4c68-890d-f2f20e197f6b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -53,7 +53,7 @@
         "root_dir = \"/content/gdrive/My Drive/\"\n",
         "base_dir = root_dir + 'fastai-v3/'"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,6 +62,22 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i9WojfFIWToY",
+        "colab_type": "text"
+      },
+      "source": [
+        "- `drive.mount('/content/gdrive', force_remount=True)` 은 `/content/gdrive` 라는 폴더를 가리키고 있다.\n",
+        "- 이는 이 폴더(/content/gdrive)에 google drive를 mount(연결) 시키는 명령어이다.\n",
+        "- `/content/gdrive` 폴더는 user가 만든 colab 서버안에 있는 가상 컴퓨터의 폴더이다.\n",
+        "- 이 가상컴퓨터의 폴더와 개인 구글드라이브(account)는 서로 관계가 없는데, 이 둘을 서로 연결시키는 것이다.\n",
+        "- `root_dir` : 가상컴퓨터의에서 구글드라이브(My Drive)를 가리키는 폴더\n",
+        "  - 이 강의에 관련된 서브폴더 'fastai-v3'를 base_dir로 설정\n",
+        "- 모든 노트북에서 이 base_dir을 사용할 예정\n"
       ]
     },
     {
