--- a/ex3.ipynb
+++ b/ex3.ipynb
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "JtiXq1Tw-_oL",
         "colab_type": "code",
-        "outputId": "924acd21-db8a-48cc-e472-b01eee62332c",
+        "outputId": "0cb80d03-e3ef-4355-9fb4-132371037685",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -329,7 +329,7 @@
         "root_dir = \"/content/gdrive/My Drive/\"\n",
         "base_dir = root_dir + 'fastai-v3/data/ex3'"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
       "source": [
         "path.ls()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +613,7 @@
         "from PIL import Image\n",
         "Image.open(base_dir+'/upload.png')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +683,7 @@
       "source": [
         "download_images(path/file, dest, max_pics=200)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -762,7 +762,7 @@
         "# If you have problems download, try with `max_workers=0` to see exceptions:\n",
         "download_images(path/file, dest, max_pics=20, max_workers=0)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -806,7 +806,7 @@
         "    print(c)\n",
         "    verify_images(path/c, delete=True, max_size=500)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,18 +898,18 @@
       "metadata": {
         "id": "PfWDJEMx-euO",
         "colab_type": "code",
+        "outputId": "f2fac705-03be-4924-dd43-6874cec901af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "f2fac705-03be-4924-dd43-6874cec901af"
+        }
       },
       "source": [
         "np.random.seed(42)\n",
         "data = ImageDataBunch.from_folder(path, train=\".\", valid_pct=0.2,\n",
         "        ds_tfms=get_transforms(), size=224, num_workers=4).normalize(imagenet_stats)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,16 +944,16 @@
       "metadata": {
         "id": "4-4bS5IRTaIw",
         "colab_type": "code",
+        "outputId": "ce46ea04-1817-4cef-c205-aad7c8e4a9ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
-        },
-        "outputId": "ce46ea04-1817-4cef-c205-aad7c8e4a9ec"
+        }
       },
       "source": [
         "doc(ImageDataBunch.from_folder)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1014,7 +1014,7 @@
       "source": [
         "data.classes"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
       "source": [
         "data.show_batch(rows=3, figsize=(7,8))"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1084,7 +1084,7 @@
       "source": [
         "data.classes, data.c, len(data.train_ds), len(data.valid_ds)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1125,6 +1125,7 @@
       "metadata": {
         "id": "b0Vd448C-euj",
         "colab_type": "code",
+        "outputId": "6571737e-83d7-4a6c-8fc4-3e11461724c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 83,
@@ -1138,13 +1139,12 @@
             "ea8d1d70427747cba6b81750ca1003e7",
             "cd8c37388a864594b1937ba391b00f56"
           ]
-        },
-        "outputId": "6571737e-83d7-4a6c-8fc4-3e11461724c1"
+        }
       },
       "source": [
         "learn = cnn_learner(data, models.resnet34, metrics=error_rate)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1192,7 +1192,7 @@
       "source": [
         "learn.fit_one_cycle(4)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1304,18 +1304,18 @@
       "metadata": {
         "id": "JOoTjD5afGwP",
         "colab_type": "code",
+        "outputId": "9b05d37c-650b-4f69-e12f-9d88736468d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 577
-        },
-        "outputId": "9b05d37c-650b-4f69-e12f-9d88736468d6"
+        }
       },
       "source": [
         "# If the plot is not showing try to give a start and end learning rate\n",
         "learn.lr_find(start_lr=1e-5, end_lr=1e-1)\n",
         "#learn.recorder.plot()"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1483,16 +1483,16 @@
       "metadata": {
         "id": "-BvpaTh2fuvS",
         "colab_type": "code",
+        "outputId": "078583a6-4580-4756-9ce7-817ff3e86b17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
-        },
-        "outputId": "078583a6-4580-4756-9ce7-817ff3e86b17"
+        }
       },
       "source": [
         "learn.recorder.plot()"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1522,7 +1522,7 @@
       "source": [
         "learn.fit_one_cycle(2, max_lr=slice(1e-05,1e-3))"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1617,16 +1617,16 @@
       "metadata": {
         "id": "FsZi-18f-eu9",
         "colab_type": "code",
+        "outputId": "1da5a4c5-fa14-4bf9-f5b2-6fa5e91da868",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "outputId": "1da5a4c5-fa14-4bf9-f5b2-6fa5e91da868"
+        }
       },
       "source": [
         "interp = ClassificationInterpretation.from_learner(learn)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1658,7 +1658,7 @@
       "source": [
         "interp.plot_confusion_matrix()"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1808,16 +1808,16 @@
       "metadata": {
         "id": "Cd2wIwJC-evM",
         "colab_type": "code",
+        "outputId": "9c178f4c-e1e8-487b-fcab-acd0803c43d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        },
-        "outputId": "9c178f4c-e1e8-487b-fcab-acd0803c43d8"
+        }
       },
       "source": [
         "ds, idxs = DatasetFormatter().from_toplosses(learn_cln)"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1916,7 +1916,7 @@
       "source": [
         "ds, idxs = DatasetFormatter().from_similars(learn_cln)"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1983,16 +1983,16 @@
       "metadata": {
         "id": "5AmUyeSMhCEP",
         "colab_type": "code",
+        "outputId": "85010fdf-4d68-4bfb-e613-e2d633b8d9a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 708
-        },
-        "outputId": "85010fdf-4d68-4bfb-e613-e2d633b8d9a6"
+        }
       },
       "source": [
         "interp.plot_top_losses(9, figsize=(15,11))"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2066,16 +2066,16 @@
       "metadata": {
         "id": "N_kUaKWpxicb",
         "colab_type": "code",
+        "outputId": "5f88c6f5-1d83-4760-baaa-bc6908bb53ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5f88c6f5-1d83-4760-baaa-bc6908bb53ff"
+        }
       },
       "source": [
         "data.classes"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2129,7 +2129,7 @@
         "img = open_image(path/'crop'/'00000178.jpg')\n",
         "img"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2185,7 +2185,7 @@
         "pred_class,pred_idx,outputs = learn.predict(img)\n",
         "pred_class"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2597,13 +2597,82 @@
       "metadata": {
         "id": "6pYjQfzT3F4x",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9125374e-b195-431e-fd07-2a1173242619"
+      },
+      "source": [
+        "??learn.predict"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Object `learn.predict` not found.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bt6rU1azmYEJ",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "??error_rate\n",
+        "??accuracy"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "03xt2fu4lpNz",
+        "colab_type": "text"
+      },
+      "source": [
+        "- pixel들의 정보(grayscale, rgb)를 하나의 값(matrix, tensor 형태의)으로 처리\n",
+        "- 처리된 값이 label 중 어느 것에 해당하는지 probability를 계산하고, 그 중 가장 높은 것을 return한다.\n",
+        "- error rate의 정의 : \n",
+        "- learing rate는 대개 3e-3을 default로 가지며, 잘 맞는다.\n",
+        "  - unfreeze 이후 다시 할 때는 보통 3e-4와 같이 0.1배 한 후 돌려주는게 일반적이다.\n",
+        "`learn.fit_one_cycle(4,3e-3)`\n",
+        "`learn.unfreeze()`\n",
+        "`learn.fit_one_cycle(4, slice(xxx,3e-4))`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xg9tUoKJldZ4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "`y = ax + b` "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PB2fe3-wqVa5",
+        "colab_type": "text"
+      },
+      "source": [
+        "- dataset이 충분한지 어떻게 아는가? : 일단 많이 모으는게 좋다.\n",
+        "- resnet34는 y=ax+b와 같은 하나의 함수이다.\n",
+        "  - imagenet data를 학습한 pre-trained model과는 다르다.\n",
+        "- `learn.save('stage-2')` 에서는 fitting을 통해 찾은 최적의 parameter 값들을 저장하는 것뿐이다."
+      ]
     }
   ]
 }
