--- a/ex3-sgd.ipynb
+++ b/ex3-sgd.ipynb
@@ -67,11 +67,11 @@
       "metadata": {
         "id": "2aBJVeL54QEM",
         "colab_type": "code",
+        "outputId": "6720bc2b-cc37-438a-a182-e95278e6362d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6720bc2b-cc37-438a-a182-e95278e6362d"
+        }
       },
       "source": [
         "from google.colab import drive\n",
@@ -79,7 +79,7 @@
         "root_dir = \"/content/gdrive/My Drive/\"\n",
         "base_dir = root_dir + 'fastai-v3/data/ex3'"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,18 +128,18 @@
       "metadata": {
         "id": "OXZQu7nj4Ags",
         "colab_type": "code",
+        "outputId": "1f41cdfd-f548-4f12-8dd9-eefb49095619",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "1f41cdfd-f548-4f12-8dd9-eefb49095619"
+        }
       },
       "source": [
         "x = torch.ones(n,2) \n",
         "x[:,0].uniform_(-1.,1)\n",
         "x[:5]"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,20 +160,50 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q-5NGLpI0MY6",
+        "colab_type": "text"
+      },
+      "source": [
+        "- tensor(array)를 생성하는 statement\n",
+        "- tensor의 값들을 바꾸는 코드\n",
+        "- row5 까지 조회하는 코드\n",
+        "\n",
+        "\n",
+        "\n",
+        "- `y = a_1*x_1 + a_2*x_2`에서\n",
+        "  - x = [x_1, x_2]를 의미\n",
+        "  - x_2는 1로 고정되어 있는 상태\n",
+        "- `x = torch.ones(n,2)`\n",
+        "  - say pyTorch to create a tensor of 'n x 2'\n",
+        "  - n rows, and 2 columns. => rank(x) = 2\n",
+        "  - 모든 componenet들이 1을 의미\n",
+        "- `x[:,0]` \n",
+        "  - ':' : for every single row\n",
+        "  - x[:,0] :  for every single row, take the column 0 \n",
+        "  - uniform_ : replace all the values with unifor random number between -1 and 1.\n",
+        "    - '_' : don't return to me but replace the original value\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yibbRUDJ4Ag3",
         "colab_type": "code",
+        "outputId": "fd6de879-21ab-4e13-d271-134e97db2eac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fd6de879-21ab-4e13-d271-134e97db2eac"
+        }
       },
       "source": [
         "a = tensor(3.,2); a"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,6 +220,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "laQD9ylftj8Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "- coefficient(3.,2) 생성 \n",
+        "  - a1 := 3, a2:= 2\n",
+        "  - slope :=3, intercept :=2 를 의미\n",
+        "- parameter(coefficent)를 감싸는 tensor는 deeplearning에서 array를 의미한다.(단, 직사각형 또는 정사각형과 같은 방식, 기존 code에서처럼 `[[3],[1,2,4],[1,2]]`처럼 element들의 특성이 서로 다르지 않다.)\n",
+        "- ex) image는 3-dimensional tensor이다.\n",
+        "  - row, columns, channel을 가진 3 matrix(r,g,b)\n",
+        "- deeplearning에서는 기존 선형대수학에서처럼 'dimension'이라는 단어보다는 'rank' 또는 'axes'를 사용한다.\n",
+        "  - ex) image는 rank3 tensor\n",
+        "- \n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xsYV4Hsc4Ag_",
@@ -203,20 +253,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C8Qxr3Ejt6ig",
+        "colab_type": "text"
+      },
+      "source": [
+        "- matrix operation\n",
+        "\n",
+        "- `x@a` in python 은 matrix product를 의미한다. (X matrix의 값에 a vector를 곱하는 것)\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3YgGWEql4AhM",
         "colab_type": "code",
+        "outputId": "4317ee8d-13be-453c-c9e0-73ec23d88289",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "4317ee8d-13be-453c-c9e0-73ec23d88289"
+        }
       },
       "source": [
         "plt.scatter(x[:,0], y);"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -230,6 +294,18 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9ogJKuMH3BIE",
+        "colab_type": "text"
+      },
+      "source": [
+        "- matplotlib의 plot\n",
+        "- x 축 : x의 모든 row의 첫번째 column값(-1,1)\n",
+        "- y 축 : x값에 parameter a를 적용해 matrix operation 해서 나온 값.\n"
       ]
     },
     {
@@ -258,6 +334,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "pR2iIKD24x8c",
+        "colab_type": "text"
+      },
+      "source": [
+        "- loss function 으로 mean squared error function을 이용\n",
+        "  - 실제 data 값(x,y)와 회귀선(x, y_hat)의 error 값을 계산해, 가장 작은 값을 구함.\n",
+        "- `y_hat`, `y` : rank 1 tensor(rank 1 vector)\n",
+        "- `(y_hat-y)**2.mean()` : mean squared error\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "YQmNJkgZ4Ahi",
         "colab_type": "text"
       },
@@ -279,21 +368,31 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DMj7Rjre66jy",
+        "colab_type": "text"
+      },
+      "source": [
+        "- 숫자 쓸 때는 float으로 쓰기\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "4-YG3EJ_4Aho",
         "colab_type": "code",
+        "outputId": "661ae222-fb21-4d93-b5b2-7ffeb2b2e041",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "661ae222-fb21-4d93-b5b2-7ffeb2b2e041"
+        }
       },
       "source": [
         "y_hat = x@a\n",
         "mse(y_hat, y)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,17 +413,17 @@
       "metadata": {
         "id": "cCL43Ey44Ahu",
         "colab_type": "code",
+        "outputId": "f466b1af-28b4-4449-ce73-bb4b709c863a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "f466b1af-28b4-4449-ce73-bb4b709c863a"
+        }
       },
       "source": [
         "plt.scatter(x[:,0],y)\n",
         "plt.scatter(x[:,0],y_hat);"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -379,16 +478,16 @@
       "metadata": {
         "id": "8A2zVuDH4Ah8",
         "colab_type": "code",
+        "outputId": "d984af12-1802-44a0-a028-4555fb96a067",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "d984af12-1802-44a0-a028-4555fb96a067"
+        }
       },
       "source": [
         "a = nn.Parameter(a); a"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,17 +529,17 @@
       "metadata": {
         "id": "SY_zH_A74AiE",
         "colab_type": "code",
+        "outputId": "db796b52-d5ba-4ac2-a862-193ac7305c21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "db796b52-d5ba-4ac2-a862-193ac7305c21"
+        }
       },
       "source": [
         "lr = 1e-1\n",
         "for t in range(100): update()"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,18 +564,18 @@
       "metadata": {
         "id": "dbonwTbm4AiI",
         "colab_type": "code",
+        "outputId": "5ebe2daa-b731-462c-cefd-526a04947b59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "5ebe2daa-b731-462c-cefd-526a04947b59"
+        }
       },
       "source": [
         "plt.scatter(x[:,0],y)\n",
         "with torch.no_grad():\n",
         "    plt.scatter(x[:,0],x@a);"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -521,11 +620,11 @@
       "metadata": {
         "id": "59Fjd81h4AiS",
         "colab_type": "code",
+        "outputId": "043e554f-0f53-4803-c354-4cab397883bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        },
-        "outputId": "043e554f-0f53-4803-c354-4cab397883bb"
+        }
       },
       "source": [
         "a = nn.Parameter(tensor(-1.,1))\n",
@@ -544,7 +643,7 @@
         "\n",
         "animation.FuncAnimation(fig, animate, np.arange(0, 100), interval=20)"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
