--- a/ex4-camvid.ipynb
+++ b/ex4-camvid.ipynb
@@ -353,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- mask를 가진 file name return"
+    "- open_mask로 img->mask로 처리하기 위해 file name을 변경해 return"
    ]
   },
   {
